Support multiple enable/disable management functions per IRQ
Change resolveMaskingFunctionProcedures to return Map<Integer,
List<Procedure>> instead of Map<Integer, Procedure>, so that multiple
masking functions targeting the same IRQ are all collected rather than
keeping only the first via putIfAbsent. Update all downstream methods
(annotateMaskingProcedures, addForksToRequestEnable,
addJoinsToRequestDisable) to iterate over the list of procedures per
IRQ.

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>